--- a/locale/es_CO.po
+++ b/locale/es_CO.po
@@ -133,159 +133,159 @@ msgctxt "model:sale_pos.add_product_form,name:"
 msgid "Add Product Form"
 msgstr "Formulario Agregar Producto"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Amount"
 msgstr "Valor"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Customer:"
 msgstr "Cliente:"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Date:"
 msgstr "Fecha:"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Description"
 msgstr "Descripción"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Draft Sale N°"
 msgstr "Venta en Borrador N°"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Paid:"
 msgstr "Pagado:"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Qty"
 msgstr "Cant."
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Residual:"
 msgstr "Cambio:"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Sale N°"
 msgstr "Factura Venta N°"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Salesman:"
 msgstr "Vendedor:"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Taxes:"
 msgstr "Impuestos:"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Ticket Nº"
 msgstr "Recibo N°"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Total (excl. taxes):"
 msgstr "Total (sin impuestos):"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Total:"
 msgstr "Total:"
 
-msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgctxt "report:sale_pos.sale_pos_ticket:"
 msgid "Unit Price"
 msgstr "Precio Unitario"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "$"
 msgstr "$"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "("
 msgstr "("
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid ")"
 msgstr ")"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "Amount"
 msgstr "Valor"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "Date"
 msgstr "Fecha"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "Notes:"
 msgstr "Notas:"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "POS SALES SUMMARY"
 msgstr "RESUMEN DE VENTAS"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "Party"
 msgstr "Cliente"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "TOTAL"
 msgstr "TOTAL"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "Tax"
 msgstr "Impuesto"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "Ticket Nº"
 msgstr "Recibo N°"
 
-msgctxt "odt:sale_pos.sales_summary:"
+msgctxt "report:sale_pos.sales_summary:"
 msgid "Total"
 msgstr "Total"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "$"
 msgstr "$"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "("
 msgstr "("
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid ")"
 msgstr ")"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "Amount"
 msgstr "Valor"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "From:"
 msgstr "De:"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "Notes:"
 msgstr "Notas:"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "POS SALES BY PARTY"
 msgstr "VENTAS POR CLIENTE"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "Party"
 msgstr "Cliente"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "TOTAL"
 msgstr "TOTAL"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "Tax"
 msgstr "Impuesto"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "To:"
 msgstr "A:"
 
-msgctxt "odt:sale_pos.sales_summary_by_party:"
+msgctxt "report:sale_pos.sales_summary_by_party:"
 msgid "Total"
 msgstr "Total"
 
