--- a/locale/es.po
+++ b/locale/es.po
@@ -19,7 +19,7 @@ msgid "Sale"
 msgstr "Venta"
 
 msgctxt "field:sale.configuration,pos_sequence:"
-msgid "Sale Pos Code Sequence"
+msgid "Sale POS Sequence"
 msgstr "Secuencia Venta TPV"
 
 msgctxt "field:sale.line,amount_w_tax:"
