--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+Version 5.3.0 - 2019-05-06
 Version 4.0.0 - 2016-05-03
 Version 3.2.1 - 2014-10-31
 * Remove unnecessary fields from depends and add other required
