--- a/locale/ca.po
+++ b/locale/ca.po
@@ -2,23 +2,19 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:account.statement.line:"
-msgid "Amount should be a positive or negative value."
-msgstr "L'import hauria de ser un valor positiu o negatiu."
-
-msgctxt "error:res.user:"
-msgid "You can not have two users with the same login!"
-msgstr "No podeu tenir dos usuaris amb el mateix identificador d'entrada!"
-
-msgctxt "error:sale.sale:"
-msgid "Go to user preferences and select a shop (\"%s\")"
-msgstr "Seleccioneu una botiga a les vostres preferencies (\"%s\")."
-
 msgctxt "field:account.statement.line,sale:"
 msgid "Sale"
 msgstr "Venda"
 
 msgctxt "field:sale.configuration,pos_sequence:"
+msgid "Sale POS Sequence"
+msgstr "Seqüencia Venda TPV"
+
+msgctxt "field:sale.configuration,ticket_report:"
+msgid "Ticket Report"
+msgstr "Informe tiquet"
+
+msgctxt "field:sale.configuration.sequence,pos_sequence:"
 msgid "Sale POS Sequence"
 msgstr "Seqüencia Venda TPV"
 
@@ -66,10 +62,6 @@ msgctxt "field:sale.shop,address:"
 msgid "Address"
 msgstr "Adreces"
 
-msgctxt "field:sale.shop,company_party:"
-msgid ""
-msgstr ""
-
 msgctxt "field:sale.shop,party:"
 msgid "Default Party"
 msgstr "Tercer per defecte"
@@ -78,9 +70,13 @@ msgctxt "field:sale.shop,self_pick_up:"
 msgid "Default Self Pick Up"
 msgstr "Auto-recollida per defecte"
 
-msgctxt "field:sale_pos.add_product_form,id:"
-msgid "ID"
-msgstr "ID"
+msgctxt "field:sale_pos.add_product_form,input_value:"
+msgid "Input Value"
+msgstr "Valor d'entrada"
+
+msgctxt "field:sale_pos.add_product_form,last_product:"
+msgid "Last Product"
+msgstr "Últim producte"
 
 msgctxt "field:sale_pos.add_product_form,lines:"
 msgid "Lines"
@@ -89,6 +85,14 @@ msgstr "Línies"
 msgctxt "field:sale_pos.add_product_form,sale:"
 msgid "Sale"
 msgstr "Venda"
+
+msgctxt "field:sale_pos.choose_product_form,product:"
+msgid "Product To Pick"
+msgstr "Producte a seleccionar"
+
+msgctxt "field:sale_pos.choose_product_form,products:"
+msgid "Products"
+msgstr "Productes"
 
 msgctxt "help:sale.sale,self_pick_up:"
 msgid ""
@@ -106,6 +110,10 @@ msgstr ""
 "Els productes són recollits pel propi client abans de la venda, pel que no "
 "es generà albarà."
 
+msgctxt "model:ir.action,name:"
+msgid "Sales Summary by Party"
+msgstr "Resum de vendes per tercer"
+
 msgctxt "model:ir.action,name:act_sale_form"
 msgid "POS Sales"
 msgstr "Vendes TPV"
@@ -117,10 +125,6 @@ msgstr "Tiquet de venda"
 msgctxt "model:ir.action,name:report_sales_summary"
 msgid "Sales Summary"
 msgstr "Resum de vendes"
-
-msgctxt "model:ir.action,name:report_sales_summary_by_party"
-msgid "Sales Summary by Party"
-msgstr "Resum de vendes per tercer"
 
 msgctxt "model:ir.action,name:wizard_add_product"
 msgid "Add Products"
@@ -149,6 +153,22 @@ msgctxt ""
 msgid "Quotation"
 msgstr "Pressupost"
 
+msgctxt "model:ir.model.button,string:add_sum_button"
+msgid "Add Sum"
+msgstr "Afegir suma"
+
+msgctxt "model:ir.model.button,string:print_ticket_button"
+msgid "Ticket"
+msgstr "Tiquet"
+
+msgctxt "model:ir.model.button,string:scan_button"
+msgid "Scan"
+msgstr "Escaneja"
+
+msgctxt "model:ir.model.button,string:wizard_add_product_button"
+msgid "Add Products"
+msgstr "Afegeix productes"
+
 msgctxt "model:ir.sequence.strict,name:sequence_sale_pos"
 msgid "Sale Pos"
 msgstr "Venda TPV"
@@ -165,13 +185,17 @@ msgctxt "model:sale_pos.add_product_form,name:"
 msgid "Add Product Form"
 msgstr "Formulari afegeix producte"
 
+msgctxt "model:sale_pos.choose_product_form,name:"
+msgid "Choose Product Form"
+msgstr "Selecciona producte"
+
+msgctxt "report:sale_pos.sale_ticket:"
+msgid ":"
+msgstr ":"
+
 msgctxt "report:sale_pos.sale_ticket:"
 msgid "Amount"
 msgstr "Import"
-
-msgctxt "report:sale_pos.sale_ticket:"
-msgid "Customer:"
-msgstr "Client:"
 
 msgctxt "report:sale_pos.sale_ticket:"
 msgid "Date:"
@@ -182,36 +206,36 @@ msgid "Description"
 msgstr "Descripció"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Draft Sale N°"
-msgstr "Comanda borrador Nº"
+msgid "Description:"
+msgstr "Descripció:"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Paid:"
-msgstr "Pagat:"
+msgid "Draft Sale Order"
+msgstr "Venda esborrany"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Qty"
-msgstr "Qt"
+msgid "Quantity"
+msgstr "Quantitat"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Residual:"
-msgstr "Resta:"
+msgid "Quotation N°:"
+msgstr "Pressupost Núm.:"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Sale N°"
-msgstr "Venda Nº"
+msgid "Reference:"
+msgstr "Referència:"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Salesman:"
-msgstr "Venedor:"
+msgid "Sale Order N°:"
+msgstr "Venta Núm.:"
+
+msgctxt "report:sale_pos.sale_ticket:"
+msgid "Taxes"
+msgstr "Impostos"
 
 msgctxt "report:sale_pos.sale_ticket:"
 msgid "Taxes:"
 msgstr "Impostos:"
-
-msgctxt "report:sale_pos.sale_ticket:"
-msgid "Ticket Nº"
-msgstr "Factura simplificada Núm."
 
 msgctxt "report:sale_pos.sale_ticket:"
 msgid "Total (excl. taxes):"
@@ -273,54 +297,6 @@ msgctxt "report:sale_pos.sales_summary:"
 msgid "Total"
 msgstr "Total"
 
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "$"
-msgstr "$"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "("
-msgstr "("
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid ")"
-msgstr ")"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Amount"
-msgstr "Import"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "From:"
-msgstr "Des de:"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Notes:"
-msgstr "Notes:"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "POS SALES BY PARTY"
-msgstr "VENDES TPV PER TERCER"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Party"
-msgstr "Tercer"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "TOTAL"
-msgstr "TOTAL"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Tax"
-msgstr "Impostos"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "To:"
-msgstr "Fins:"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Total"
-msgstr "Total"
-
 msgctxt "view:product.product:"
 msgid "Codes"
 msgstr "Codis"
@@ -347,69 +323,17 @@ msgstr ""
 "lliurament, desmarqueu el camp d'auto-recollida en el formulari de venda i "
 "useu els botons de la línia inferior."
 
-msgctxt "view:sale.payment.form:"
-msgid "Sale Payment Form"
-msgstr "Formulari de pagament de venda"
-
-msgctxt "view:sale.sale:"
-msgid "Add Products"
-msgstr "Afegeix productes"
-
-msgctxt "view:sale.sale:"
-msgid "Add Sum"
-msgstr "Afegeix suma"
-
-msgctxt "view:sale.sale:"
-msgid "Cancel"
-msgstr "Cancel·la"
-
 msgctxt "view:sale.sale:"
 msgid "Comment"
 msgstr "Comentari"
 
 msgctxt "view:sale.sale:"
-msgid "Confirm"
-msgstr "Confirma"
-
-msgctxt "view:sale.sale:"
-msgid "Draft"
-msgstr "Esborrany"
-
-msgctxt "view:sale.sale:"
-msgid "Handle Invoice Exception"
-msgstr "Gestiona excepció de factura"
-
-msgctxt "view:sale.sale:"
-msgid "Handle Shipment Exception"
-msgstr "Gestiona excepció d'enviament"
-
-msgctxt "view:sale.sale:"
-msgid "Pay"
-msgstr "Paga"
+msgid "Other Info"
+msgstr "Informació addicional"
 
 msgctxt "view:sale.sale:"
 msgid "Payments"
 msgstr "Pagaments"
-
-msgctxt "view:sale.sale:"
-msgid "Pos Cash Sales"
-msgstr "Vendes TPV"
-
-msgctxt "view:sale.sale:"
-msgid "Process"
-msgstr "Processa"
-
-msgctxt "view:sale.sale:"
-msgid "Quote"
-msgstr "Pressupost"
-
-msgctxt "view:sale.sale:"
-msgid "Sale"
-msgstr "Venda"
-
-msgctxt "view:sale.sale:"
-msgid "Ticket"
-msgstr "Tiquet"
 
 msgctxt "view:sale.sale:"
 msgid "Time"
@@ -427,14 +351,22 @@ msgctxt "view:sale_pos.add_product_form:"
 msgid "Add products"
 msgstr "Afegeix productes"
 
-msgctxt "wizard_button:sale_pos.add_product,start,add_:"
-msgid "Add"
-msgstr "Afegeix"
+msgctxt "wizard_button:sale_pos.add_product,choose,end:"
+msgid "Cancel"
+msgstr "Cancel·la"
 
-msgctxt "wizard_button:sale_pos.add_product,start,add_new_:"
-msgid "Add and New"
-msgstr "Afegeix i nou"
+msgctxt "wizard_button:sale_pos.add_product,choose,pick_product_:"
+msgid "Choose"
+msgstr "Selecciona"
+
+msgctxt "wizard_button:sale_pos.add_product,start,end:"
+msgid "Accept"
+msgstr "Accepta"
 
 msgctxt "wizard_button:sale_pos.add_product,start,end:"
 msgid "Cancel"
 msgstr "Cancel·la"
+
+msgctxt "wizard_button:sale_pos.add_product,start,scan_:"
+msgid "Scan"
+msgstr "Escaneja"
