--- a/locale/es.po
+++ b/locale/es.po
@@ -2,23 +2,19 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:account.statement.line:"
-msgid "Amount should be a positive or negative value."
-msgstr "Importe debe ser una cantidad positiva o negativa."
-
-msgctxt "error:res.user:"
-msgid "You can not have two users with the same login!"
-msgstr "No puede tener dos usuarios con el mismo identificador de entrada."
-
-msgctxt "error:sale.sale:"
-msgid "Go to user preferences and select a shop (\"%s\")"
-msgstr "Seleccione una tienda en sus preferencias (\"%s\")."
-
 msgctxt "field:account.statement.line,sale:"
 msgid "Sale"
 msgstr "Venta"
 
 msgctxt "field:sale.configuration,pos_sequence:"
+msgid "Sale POS Sequence"
+msgstr "Secuencia Venta TPV"
+
+msgctxt "field:sale.configuration,ticket_report:"
+msgid "Ticket Report"
+msgstr "Informe tique"
+
+msgctxt "field:sale.configuration.sequence,pos_sequence:"
 msgid "Sale POS Sequence"
 msgstr "Secuencia Venta TPV"
 
@@ -62,14 +58,6 @@ msgctxt "field:sale.sale,ticket_number:"
 msgid "Ticket Number"
 msgstr "Número de ticket"
 
-msgctxt "field:sale.shop,address:"
-msgid ""
-msgstr ""
-
-msgctxt "field:sale.shop,company_party:"
-msgid ""
-msgstr ""
-
 msgctxt "field:sale.shop,party:"
 msgid "Default Party"
 msgstr "Tercero por defecto"
@@ -78,9 +66,13 @@ msgctxt "field:sale.shop,self_pick_up:"
 msgid "Default Self Pick Up"
 msgstr "Autorecogida por defecto"
 
-msgctxt "field:sale_pos.add_product_form,id:"
-msgid "ID"
-msgstr "ID"
+msgctxt "field:sale_pos.add_product_form,input_value:"
+msgid "Input Value"
+msgstr "Valor de entrada"
+
+msgctxt "field:sale_pos.add_product_form,last_product:"
+msgid "Last Product"
+msgstr "Último producto"
 
 msgctxt "field:sale_pos.add_product_form,lines:"
 msgid "Lines"
@@ -89,6 +81,14 @@ msgstr "Líneas"
 msgctxt "field:sale_pos.add_product_form,sale:"
 msgid "Sale"
 msgstr "Venta"
+
+msgctxt "field:sale_pos.choose_product_form,product:"
+msgid "Product To Pick"
+msgstr "Producto para seleccionar "
+
+msgctxt "field:sale_pos.choose_product_form,products:"
+msgid "Products"
+msgstr "Productos"
 
 msgctxt "help:sale.sale,self_pick_up:"
 msgid ""
@@ -106,6 +106,10 @@ msgstr ""
 "Los productos son recogidos por el propio cliente antes de la venta, por lo "
 "que no se crea albarán."
 
+msgctxt "model:ir.action,name:"
+msgid "Sales Summary by Party"
+msgstr "Resumen de ventas por tercero"
+
 msgctxt "model:ir.action,name:act_sale_form"
 msgid "POS Sales"
 msgstr "Ventas TPV"
@@ -117,10 +121,6 @@ msgstr "Ticket de venta"
 msgctxt "model:ir.action,name:report_sales_summary"
 msgid "Sales Summary"
 msgstr "Resumen de ventas"
-
-msgctxt "model:ir.action,name:report_sales_summary_by_party"
-msgid "Sales Summary by Party"
-msgstr "Resumen de ventas por tercero"
 
 msgctxt "model:ir.action,name:wizard_add_product"
 msgid "Add Products"
@@ -149,6 +149,22 @@ msgctxt ""
 msgid "Quotation"
 msgstr "Presupuesto"
 
+msgctxt "model:ir.model.button,string:add_sum_button"
+msgid "Add Sum"
+msgstr "Añadir suma"
+
+msgctxt "model:ir.model.button,string:print_ticket_button"
+msgid "Ticket"
+msgstr "Tique"
+
+msgctxt "model:ir.model.button,string:scan_button"
+msgid "Scan"
+msgstr "Escanear"
+
+msgctxt "model:ir.model.button,string:wizard_add_product_button"
+msgid "Add Products"
+msgstr "Añadir productos"
+
 msgctxt "model:ir.sequence.strict,name:sequence_sale_pos"
 msgid "Sale Pos"
 msgstr "Venta TPV"
@@ -165,13 +181,17 @@ msgctxt "model:sale_pos.add_product_form,name:"
 msgid "Add Product Form"
 msgstr "Formulario añadir producto"
 
+msgctxt "model:sale_pos.choose_product_form,name:"
+msgid "Choose Product Form"
+msgstr "Seleccionar producto"
+
+msgctxt "report:sale_pos.sale_ticket:"
+msgid ":"
+msgstr ":"
+
 msgctxt "report:sale_pos.sale_ticket:"
 msgid "Amount"
 msgstr "Importe"
-
-msgctxt "report:sale_pos.sale_ticket:"
-msgid "Customer:"
-msgstr "Cliente:"
 
 msgctxt "report:sale_pos.sale_ticket:"
 msgid "Date:"
@@ -182,36 +202,36 @@ msgid "Description"
 msgstr "Descripción"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Draft Sale N°"
-msgstr "Pedido borrador N°"
+msgid "Description:"
+msgstr "Descripción:"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Paid:"
-msgstr "Pagado:"
+msgid "Draft Sale Order"
+msgstr "Ventas borrador"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Qty"
-msgstr "Ctda"
+msgid "Quantity"
+msgstr "Cantidad"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Residual:"
-msgstr "Resto:"
+msgid "Quotation N°:"
+msgstr "Presupuesto Nº:"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Sale N°"
-msgstr "Pedido Nº"
+msgid "Reference:"
+msgstr "Referencia:"
 
 msgctxt "report:sale_pos.sale_ticket:"
-msgid "Salesman:"
-msgstr "Vendedor:"
+msgid "Sale Order N°:"
+msgstr "Venta Nº:"
+
+msgctxt "report:sale_pos.sale_ticket:"
+msgid "Taxes"
+msgstr "Impuestos"
 
 msgctxt "report:sale_pos.sale_ticket:"
 msgid "Taxes:"
 msgstr "Impuestos:"
-
-msgctxt "report:sale_pos.sale_ticket:"
-msgid "Ticket Nº"
-msgstr "Factura simplificada Nº"
 
 msgctxt "report:sale_pos.sale_ticket:"
 msgid "Total (excl. taxes):"
@@ -273,54 +293,6 @@ msgctxt "report:sale_pos.sales_summary:"
 msgid "Total"
 msgstr "Total"
 
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "$"
-msgstr "$"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "("
-msgstr "("
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid ")"
-msgstr ")"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Amount"
-msgstr "Importe"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "From:"
-msgstr "Desde:"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Notes:"
-msgstr "Notas:"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "POS SALES BY PARTY"
-msgstr "VENTAS TPV POR TERCERO"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Party"
-msgstr "Tercero"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "TOTAL"
-msgstr "TOTAL"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Tax"
-msgstr "Impuestos"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "To:"
-msgstr "Hasta:"
-
-msgctxt "report:sale_pos.sales_summary_by_party:"
-msgid "Total"
-msgstr "Total"
-
 msgctxt "view:product.product:"
 msgid "Codes"
 msgstr "Códigos"
@@ -347,69 +319,17 @@ msgstr ""
 "la entrega, desmarque el campo de autorecogida en el formulario de venta y "
 "use los botones de la línea inferior."
 
-msgctxt "view:sale.payment.form:"
-msgid "Sale Payment Form"
-msgstr "Formulario de pago de la venta"
-
-msgctxt "view:sale.sale:"
-msgid "Add Products"
-msgstr "Añadir productos"
-
-msgctxt "view:sale.sale:"
-msgid "Add Sum"
-msgstr "Añadir suma"
-
-msgctxt "view:sale.sale:"
-msgid "Cancel"
-msgstr "Cancelar"
-
 msgctxt "view:sale.sale:"
 msgid "Comment"
 msgstr "Comentario"
 
 msgctxt "view:sale.sale:"
-msgid "Confirm"
-msgstr "Confirmar"
-
-msgctxt "view:sale.sale:"
-msgid "Draft"
-msgstr "Borrador"
-
-msgctxt "view:sale.sale:"
-msgid "Handle Invoice Exception"
-msgstr "Gestionar excepción de factura"
-
-msgctxt "view:sale.sale:"
-msgid "Handle Shipment Exception"
-msgstr "Gestionar excepción de envío"
-
-msgctxt "view:sale.sale:"
-msgid "Pay"
-msgstr "Pagar"
+msgid "Other Info"
+msgstr "Información adicional"
 
 msgctxt "view:sale.sale:"
 msgid "Payments"
 msgstr "Pagos"
-
-msgctxt "view:sale.sale:"
-msgid "Pos Cash Sales"
-msgstr "Ventas TPV"
-
-msgctxt "view:sale.sale:"
-msgid "Process"
-msgstr "Procesar"
-
-msgctxt "view:sale.sale:"
-msgid "Quote"
-msgstr "Presupuesto"
-
-msgctxt "view:sale.sale:"
-msgid "Sale"
-msgstr "Venta"
-
-msgctxt "view:sale.sale:"
-msgid "Ticket"
-msgstr "Tique"
 
 msgctxt "view:sale.sale:"
 msgid "Time"
@@ -427,14 +347,22 @@ msgctxt "view:sale_pos.add_product_form:"
 msgid "Add products"
 msgstr "Añadir productos"
 
-msgctxt "wizard_button:sale_pos.add_product,start,add_:"
-msgid "Add"
-msgstr "Añadir"
+msgctxt "wizard_button:sale_pos.add_product,choose,end:"
+msgid "Cancel"
+msgstr "Cancelar"
 
-msgctxt "wizard_button:sale_pos.add_product,start,add_new_:"
-msgid "Add and New"
-msgstr "Añadir y nuevo"
+msgctxt "wizard_button:sale_pos.add_product,choose,pick_product_:"
+msgid "Choose"
+msgstr "Selecciona"
+
+msgctxt "wizard_button:sale_pos.add_product,start,end:"
+msgid "Accept"
+msgstr "Acceptar"
 
 msgctxt "wizard_button:sale_pos.add_product,start,end:"
 msgid "Cancel"
 msgstr "Cancelar"
+
+msgctxt "wizard_button:sale_pos.add_product,start,scan_:"
+msgid "Scan"
+msgstr "Escanear"
